server/main-api/src/search/search_executor/snapshots/navigatum_server__search__search_executor__test__good_queries-23.snap
---
source: main-api/src/search/search_executor/mod.rs
description: ""
expression: actual
info: "'342 Physik' should get '5101.EG.342' in 1 results"
---
- facet: rooms
  entries:
    - id: 5101.EG.342
      type: room
      name: "5101.EG.\u0019342\u0017 (\u0019Physik\u0017labor)"
      subtext: "garching, Physik I"
      subtext_bold: 2342@5101
    - id: 5101.01.342
      type: room
      name: "5101.01.\u0019342\u0017 (Sitzungs-,  Konferenzraum)"
      subtext: "garching, Physik I"
      subtext_bold: 3342@5101
    - id: 4213.01.342
      type: room
      name: "4213.01.\u0019342\u0017 (Labor (gem. Nutzung 1124302010;1110064600))"
      subtext: "weihenstephan, Lebensmitteltechnikum"
      subtext_bold: O42@4213
    - id: 4213.EG.342
      type: room
      name: "4213.EG.\u0019342\u0017 (Labor)"
      subtext: "weihenstephan, Lebensmitteltechnikum"
      subtext_bold: E42@4213
    - id: 4317.03.342
      type: room
      name: "4317.03.\u0019342\u0017 (Labor)"
      subtext: "weihenstephan, Tierwissenschaften"
      subtext_bold: 3.42@4317
    - id: 2910.03.342
      type: room
      name: "2910.03.\u0019342\u0017 (Teeküche)"
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.342@2910
    - id: 0503.01.342
      type: room
      name: "0503.01.\u0019342\u0017 (Büro)"
      subtext: "stammgelände, Thierschbau (Z3)"
      subtext_bold: 1342@0503
    - id: 0503.03.342
      type: room
      name: "0503.03.\u0019342\u0017 (Büro)"
      subtext: "stammgelände, Thierschbau (Z3)"
      subtext_bold: 3342@0503
    - id: 0503.EG.342
      type: room
      name: "0503.EG.\u0019342\u0017 (Sekretariat 2)"
      subtext: "stammgelände, Thierschbau (Z3)"
      subtext_bold: 0342@0503
    - id: 2334.01.342
      type: room
      name: "2334.01.\u0019342\u0017 ((34.1.406) WC-Herren)"
      subtext: "campus-im-olympiapark-sz, CiO/SG Institute West, Bibliothek"
      subtext_bold: 01.2334.342@2334
  n_visible: 10
  estimatedTotalHits: 21
- facet: sites_buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: 0
