server/main-api/src/search/search_executor/snapshots/navigatum_server__search__search_executor__test__good_queries-24.snap
---
source: main-api/src/search/search_executor/mod.rs
description: "lecture hall, should be preferred over other rooms"
expression: actual
info: "'2503' should get '5101.EG.503' in 1 results # lecture hall, should be preferred over other rooms"
---
- facet: rooms
  entries:
    - id: 5101.EG.503
      type: room
      name: 5101.EG.503 (Physik Hörsaal 3)
      subtext: "garching, Physik I"
      subtext_bold: 2503@5101
      parsed_id: "PH \u00192503\u0017"
    - id: 0505.02.503
      type: room
      name: 0505.02.503 (Büro)
      subtext: "stammgelände, Wirtschaftswissenschaften (Z5)"
      subtext_bold: 2503@0505
      parsed_id: "\u00192503\u0017 Wirtsch…aften (Z5)"
    - id: 5505.02.503A
      type: room
      name: 5505.02.503A (Büro)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 2503A@5505
      parsed_id: "MW \u00192503\u0017A"
    - id: 5505.02.503M
      type: room
      name: 5505.02.503M (WC-Vorraum Herren)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 2503M@5505
      parsed_id: "MW \u00192503\u0017M"
    - id: 5505.02.503N
      type: room
      name: 5505.02.503N (WC-Vorraum Damen)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 2503N@5505
      parsed_id: "MW \u00192503\u0017N"
    - id: 5505.02.503P
      type: room
      name: 5505.02.503P (WC-Herren)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 2503P@5505
      parsed_id: "MW \u00192503\u0017P"
    - id: 5505.02.503Q
      type: room
      name: 5505.02.503Q (WC-Damen)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 2503Q@5505
      parsed_id: "MW \u00192503\u0017Q"
    - id: 5115.02.503
      type: room
      name: 5115.02.503 (Elt.)
      subtext: "garching, Zentrum für Nanotechnologie & -materialien (ZNN)"
      subtext_bold: 2.503@5115
  n_visible: 8
  estimatedTotalHits: 8
- facet: sites_buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: 0
