server/main-api/src/search/search_executor/snapshots/navigatum_server__search__search_executor__test__good_queries-36.snap
---
source: main-api/src/search/search_executor/mod.rs
description: Architects names should be matchable literally
expression: actual
info: "'N-1406' should get '0104.U1.406' in 1 results # Architects names should be matchable literally"
---
- facet: rooms
  entries:
    - id: 0104.U1.406
      type: room
      name: 0104.U1.406 (Physikal. Versuchslabor)
      subtext: "stammgelände, E-Technik Elektrophysik (N4)"
      subtext_bold: N-1406@0104
      parsed_id: "\u0019N-1406\u0017 E-Techn…hysik (N4)"
    - id: 0104.01.406
      type: room
      name: 0104.01.406 (Studentenarb. m. DV)
      subtext: "stammgelände, E-Technik Elektrophysik (N4)"
      subtext_bold: N1406@0104
    - id: 0103.U1.311
      type: room
      name: 0103.U1.311 (Praktikum/Umbau)
      subtext: "stammgelände, E-Technik El. Maschinen / Geräte (N3)"
      subtext_bold: N-1311@0103
    - id: 0108.U1.806A
      type: room
      name: 0108.U1.806A (Experimenteller Raum)
      subtext: "stammgelände, E-Technik Verfügungsgebäude (N8)"
      subtext_bold: N-1806A@0108
    - id: 0108.U1.806B
      type: room
      name: 0108.U1.806B (Experimenteller Raum)
      subtext: "stammgelände, E-Technik Verfügungsgebäude (N8)"
      subtext_bold: N-1806B@0108
    - id: 0108.U1.825
      type: room
      name: 0108.U1.825 (Experimenteller Raum)
      subtext: "stammgelände, E-Technik Verfügungsgebäude (N8)"
      subtext_bold: N-1825@0108
    - id: 0108.U1.825A
      type: room
      name: 0108.U1.825A (Experimenteller Raum)
      subtext: "stammgelände, E-Technik Verfügungsgebäude (N8)"
      subtext_bold: N-1825A@0108
    - id: 9201.EG.005
      type: room
      name: 9201.EG.005 (Seminarraum 2)
      subtext: TUM FZ Friedrich N. Schwarz Berchtesgaden
      subtext_bold: EG-05@9201
    - id: 9201.EG.006
      type: room
      name: 9201.EG.006 (Seminarraum 1)
      subtext: TUM FZ Friedrich N. Schwarz Berchtesgaden
      subtext_bold: EG-06@9201
  n_visible: 9
  estimatedTotalHits: 552
- facet: sites_buildings
  entries:
    - id: "9201"
      type: building
      name: "TUM FZ Friedrich \u0019N\u0017. Schwarz Berchtesgaden"
      subtext: Gebäude
  n_visible: 0
  estimatedTotalHits: 1
