server/main-api/src/search/search_executor/snapshots/navigatum_server__search__search_executor__test__good_queries-5.snap
---
source: main-api/src/search/search_executor/mod.rs
description: ""
expression: actual
info: "'Interims 2' should get '5416' in 1 results"
---
- facet: sites_buildings
  entries:
    - id: "5416"
      type: building
      name: "\u0019Interimshörsäle\u0017 \u0019II\u0017, Jürgen Manchot-Hörsaalgebäude"
      subtext: Gebäude
  n_visible: 1
  estimatedTotalHits: 4
- facet: rooms
  entries:
    - id: 5416.01.003
      type: room
      name: "5416.01.003 (Hörsaal \u00192\u0017,  \"\u0019Interims\u0017 \u0019II\u0017\")"
      subtext: "garching, Interims II"
      subtext_bold: 003@5416
    - id: 5416.01.004
      type: room
      name: "5416.01.004 (Hörsaal 1,  Jürgen-Manchot-Hörsaal)"
      subtext: "garching, Interims II"
      subtext_bold: 004@5416
    - id: 5620.01.102
      type: room
      name: "5620.01.102 (Hörsaal \u00192\u0017,  \"\u0019Interims\u0017 I\")"
      subtext: "garching, Interims I"
      subtext_bold: 102@5620
    - id: 5539.EG.002
      type: room
      name: "5539.EG.002 (Hörsaal \u00192\u0017,  \"Zelt\")"
      subtext: "garching, Interims III"
      subtext_bold: 0.002@5539
    - id: 5416.EG.010
      type: room
      name: 5416.EG.010 (IT/Audio)
      subtext: "garching, Interims II"
      subtext_bold: 010@5416
    - id: 5416.EG.005
      type: room
      name: 5416.EG.005 (WC-Vorraum Damen u. Herren)
      subtext: "garching, Interims II"
      subtext_bold: 005@5416
    - id: 5416.EG.006
      type: room
      name: 5416.EG.006 (WC-Herren)
      subtext: "garching, Interims II"
      subtext_bold: 006@5416
    - id: 5416.EG.007
      type: room
      name: 5416.EG.007 (WC-Beh.)
      subtext: "garching, Interims II"
      subtext_bold: 007@5416
    - id: 5416.EG.008
      type: room
      name: 5416.EG.008 (Putzraum)
      subtext: "garching, Interims II"
      subtext_bold: 008@5416
  n_visible: 9
  estimatedTotalHits: 47
